Implement upload endpoint

--- a/ops/Dockerfile
+++ b/ops/Dockerfile
@@ -7,4 +7,4 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o /csv-app ./cmd
 FROM alpine:3.16.2 as prod
 
 COPY --from=base /csv-app /usr/bin/csv-app
-CMD ["sh", "-c", "csv-app run"]
+CMD ["sh", "-c", "csv-app migrate && csv-app run"]
