--- a/ops/docker-compose.yml
+++ b/ops/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       db:
         condition: service_healthy
     env_file:
-      - .env
+      - environment
 
   db:
     image: postgres:latest
@@ -20,7 +20,7 @@ services:
     volumes:
       - db:/var/lib/postgresql/data
     env_file:
-      - .env
+      - environment
     ports:
       - "5432:5432"
     healthcheck:
